@@ -1,3 +1,15 @@
+2012-12-20  Kiran Muppala  <cmuppala@apple.com>
+
+        Set timer coalescing policy for WebKit2 processes on Mac until process visible assertion handles it automatically
+        https://bugs.webkit.org/show_bug.cgi?id=105594
+
+        Reviewed by Mark Rowe.
+
+        * Shared/mac/ChildProcessMac.mm:
+        (WebKit::initializeTimerCoalescingPolicy): Set task_latency and task_throughput QOS tiers as appropriate
+        for visible applications.
+        (WebKit::ChildProcess::platformInitialize): Add call to initializeTimerCoalescingPolicy.
+
 2012-12-20  Anders Carlsson  <andersca@apple.com>
 
         Stop building WebKit2 for Windows
